mstackxtask/mstackxProd.yaml
#To Create namespace i.e prod
apiVersion: v1
kind: Namespace
metadata:
  name: prod

#To Create frontend Deployment in prod namespace
---
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: guestbook
  name: frontend
  namespace: prod
spec:
  selector:
    matchLabels:
      app: guestbook
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: guestbook
        tier: frontend
    spec:
      containers:
      - name: frontend-app
        image: gcr.io/google-samples/gb-frontend:v4
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80


#TO create frontend service in prod namespace
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: prod
  labels:
    app: guestbook
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: guestbook
    tier: frontend


#To Create Ingress for prod frontend service
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prod-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: prod-guestbook.mstakx.io
     http:
      paths:
      - path: /prod
        backend:
          serviceName: frontend
          servicePort: 80


#To Create Horizontal Pod Autoscaler for autoscaling frontend deployment in prod namespace
